--- a/css/style.css
+++ b/css/style.css
@@ -147,23 +147,23 @@ section h3::after {
 	opacity: 80%;
 	padding-bottom: 10px;
 }
-.col-5 {
+.col {
 	width: 33.33%;
 	box-sizing: border-box;
 	float: left;
 	text-align: center;
 	padding: 50px 10px;
 }
-.col-5 p,
+.col p,
 p a {
 	color: white;
 }
-.col-5 h4 {
+.col h4 {
 	padding-bottom: 10px;
 	border-bottom: 1px solid rgb(248, 0, 0);
 	margin-bottom: 15px;
 }
-.col-5 a:hover {
+.col a:hover {
 	color:yellow;
 }
 marquee {
@@ -193,7 +193,7 @@ footer small {
 	header ul {
 		display: none;
 	}
-	.col-5{
+	.col{
 		width: 100%;
 	}
 }
