--- a/css/login.css
+++ b/css/login.css
@@ -118,7 +118,8 @@ a {
     opacity: 80%; 
     border-radius: 10px; 
     text-align: center; 
-    height: 30px;
+	height: 30px;
+	outline: none;
 }
 .Login {
     width: 200px;
