--- a/css/signin.css
+++ b/css/signin.css
@@ -119,7 +119,8 @@ a {
     opacity: 80%; 
     border-radius: 10px;
     text-align: center;
-    height: 30px;
+	height: 30px;
+	outline: none;
 }
 .Signin {
     width: 200px;
